styles/blocks/footer.scss
@use 'global' as *;
@use 'components/text';
@use 'mq';

.footer {
	--footer-max-width: 1280px;
	--footer-padding: 40px 20px 20px;
	--footer-background-color: #{$background-color};
    --footer-font-color: #{$font-color};

	background-color: var(--footer-background-color);
	color: var(--footer-font-color);
	font-size: 16px;
	line-height: 15px;

	&__container {
		position: relative;
		max-width: var(--footer-max-width);
		margin: 0 auto;
		padding: var(--footer-padding);
		display: flex;
		flex-direction: column;
		gap: 20px;
	}

	&__row {
		display: flex;
		align-items: center;
		justify-content: space-between;
		gap: 20px;
	}

	&__bottom-row {
		display: flex;
		flex-wrap: wrap;
	}

	&__column {
		display: flex;
		flex-direction: column;
		gap: 20px;
	}

	&__section {
		display: flex;
		flex-direction: column;
		gap: 10px;
	}

	&__address {
		max-width: 300px;
	}

	.heading {
		font-size: 16px;
		line-height: 15px;
		font-weight: 800;
		letter-spacing: 0.8px;
		text-transform: uppercase;
	}

	.link {
		color: $black;
		transition: 0.3s linear all;

		&:hover {
			color: $purple;
		}
	}

	@include mq.to(sm) {
		&__row {
			flex-direction: column;
		}

		&__contacts {
			order: 1;
		}

		&__social {
			order: -1;
		}

		.list {
			gap: 10px;
		}
	}

	@include mq.from(sm) {
		&__logo {
			position: absolute;
			top: -20px;
		}

		&__top-row {
			align-items: flex-start;
			justify-content: space-between;
		}

		&__bottom-row {
			align-items: center;
			justify-content: space-between;
		}

		&__contacts {
			margin-top: 40px;
		}

		&__nav {
			display: grid;
			gap: 20px;
			grid-template-areas:
				'a b'
				'c d'
				'c e'
			;
		}

		&__about {
			grid-area: a;
		}

		&__courses {
			grid-area: c;
		}

		&__formats {
			grid-area: b;
		}

		&__sout {
			grid-area: d;
		}

		&__license {
			grid-area: e;
		}
	}

	@include mq.from(md) {
		&__nav {
			display: grid;
			gap: 20px;
			grid-template-areas:
				'a b c'
				'a . d'
				'. e e'
			;
		}

		&__about {
			grid-area: a;
		}

		&__courses {
			grid-area: b;
			position: relative;
			padding-top: 25px;

			.heading {
				position: absolute;
				top: 0;
				white-space: nowrap;

				&::after {
					content: ' и программы школы';
					display: inline;
				}
			}
		}

		&__formats {
			grid-area: c;
			padding-top: 25px;

			.heading {
				display: none;
			}
		}

		&__sout {
			grid-area: d;
		}

		&__license {
			grid-area: e;
		}

		&__copyright {
			text-align: center;
		}
	}
}

